# fastmvc_dashboards

./: .gitignore  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  THEME_UPDATE.md  pyproject.toml  requirements.txt
.fastmvc/recordings/: 063050e7.json  2256a9fb.json  36f97efa.json  86dd3e39.json  8cd0ce1b.json  972ecf46.json  a0d94b10.json  f7d9d34c.json
frontend/: package-lock.json  package.json
src/: __init__.py  _optional_import.py  embed_revocation.py  embed_signing.py  embed_theme.py  router.py
src/api_dashboard/: __init__.py  registry.py  router.py
src/core/: audit.py  auth.py  health.py  metrics.py  rate_limit.py  registry.py
src/fast_dashboards/: __init__.py
src/fast_dashboards/core/: audit.py  auth.py  cache.py  config_reload.py  constants.py  database.py  embed_signing.py  embed_theme.py  encryption.py  graphql_generator.py  health.py  layout.py  metrics.py  nplus1_detector.py  rate_limit.py  registry.py  saga.py  seo.py  smart_cache.py  time_travel.py  tracing.py  webhooks.py
src/fast_dashboards/integrations/providers/: grafana.py  metabase.py
src/fast_dashboards/operations/api_dashboard/: router.py
src/fast_dashboards/operations/health/: dashboard.py
src/fast_dashboards/operations/queues_dashboard/: router.py
src/fast_dashboards/operations/secrets_dashboard/: router.py
src/fast_dashboards/operations/tenants_dashboard/: router.py
src/fast_dashboards/operations/workflows/: engine.py
src/fast_dashboards/operations/workflows_dashboard/: router.py
src/fastmvc_dashboards/: __init__.py
src/fastmvc_dashboards/secrets/: providers.py
src/fastmvc_dashboards/workflows/: __init__.py
src/fastmvc_dashboards/workflows_dashboard/: router.py
src/health/: __init__.py  dashboard.py
src/operations/health/: dashboard.py
src/operations/queues_dashboard/: router.py
src/operations/secrets_dashboard/: router.py
src/operations/tenants_dashboard/: router.py
src/operations/workflows_dashboard/: router.py
src/providers/: __init__.py  base.py  grafana.py  looker.py  metabase.py  powerbi.py
src/queues_dashboard/: __init__.py  router.py
src/secrets/: __init__.py
src/secrets_dashboard/: __init__.py  router.py
src/tenants_dashboard/: __init__.py  router.py
src/workflows/: engine.py  order_lifecycle.py
src/workflows_dashboard/: __init__.py
tests/: __init__.py  test_loose_coupling.py  test_mocks.py  test_public_api.py  test_registry.py  test_router.py  test_smart_cache.py
tests/e2e/: __init__.py  test_dashboard_e2e.py
tests/integration/: __init__.py  test_dashboard_integration.py  test_registry_integration.py
tests/mocks/: __init__.py  start_utils.py
tests/mocks/configurations/: __init__.py  feature_flags.py  identity.py  jobs.py  queues.py  rate_limit.py  secrets.py  workflows.py
tests/mocks/core/: __init__.py  datastores.py
tests/mocks/core/tenancy/: __init__.py  context.py
tests/mocks/core/utils/: __init__.py  optional_imports.py
