[project]
name = "fastmvc_dashboards"
version = "0.1.0"
description = "Dashboards extension for FastMVC (health, API, queues, tenants, secrets, workflows)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/your-org/fastmvc_dashboards"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/fastmvc_dashboards"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = ["pragma: no cover"]
omit = ["*/tests/*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

