[project]
name = "fast-dashboards"
version = "1.6.0"
description = "Dashboards for FastMVC: embed signing, revocation, theme params, Metabase/Grafana/Looker/PowerBI stubs, routers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name = "Shivansh Sengar", email = "sengarsinghshivansh@gmail.com"},
    {name = "Shreyansh Sengar", email = "sengarsinghshreyansh@gmail.com"},
]
keywords = ["fastapi", "dashboards", "metabase", "grafana", "embed", "fastmvc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fast-platform>=1.5.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "httpx>=0.24.0", "PyJWT>=2.0.0"]
metabase = ["PyJWT>=2.0.0"]

[project.urls]
Homepage = "https://github.com/shregar1/fastMVC"
Repository = "https://github.com/shregar1/fastMVC"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests/mocks", "src"]

[tool.coverage.run]
source = ["src"]
branch = false
# Integration-heavy routers (host app imports) are not covered by unit tests; measure embed + providers + layout.
omit = [
    "*/core/_optional_import.py",
    "*/operations/api_dashboard/router.py",
    "*/operations/api_dashboard/registry.py",
    "*/operations/health/dashboard.py",
    "*/operations/queues_dashboard/router.py",
    "*/operations/secrets_dashboard/router.py",
    "*/operations/tenants_dashboard/router.py",
    "*/operations/workflows_dashboard/router.py",
    "*/operations/workflows/*.py",
    "*/sec/secrets/*.py",
    "*/core/router.py",
    "src/__init__.py",
    "*/operations/queues_dashboard/__init__.py",
    "*/operations/secrets_dashboard/__init__.py",
    "*/operations/tenants_dashboard/__init__.py",
    "*/operations/workflows_dashboard/__init__.py",
    "*/operations/health/__init__.py",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = ["pragma: no cover"]
omit = ["*/tests/*"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["fast_dashboards", "fast_dashboards.core", "fast_dashboards.integrations", "fast_dashboards.integrations.providers", "fast_dashboards.operations", "fast_dashboards.operations.api_dashboard", "fast_dashboards.operations.health", "fast_dashboards.operations.queues_dashboard", "fast_dashboards.operations.secrets_dashboard", "fast_dashboards.operations.tenants_dashboard", "fast_dashboards.operations.workflows", "fast_dashboards.operations.workflows_dashboard", "fast_dashboards.sec", "fast_dashboards.sec.secrets"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
